<resources>
    <string name="app_name">P3tsKit</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="scan_your_pet">Scan Your Pet</string>
    <string name="ChooseImage">Choose Image</string>
    <string name="scan">Scan</string>
    <string name="history_scan">History Scan</string>
    <string name="newsletter">Newsletter</string>
    <string name="history">History</string>
    <string name="hello_user">Hello!\n</string>
    <string name="title_hello">Hello!</string>
    <string name="user">Rukmini</string>
    <string name="content_cat">This is cat card</string>
    <string name="content_dog">This is dog card</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_redirect">Already have an account? Login now!</string>
    <string name="upload">Upload</string>
    <string name="image_preview">ImagePreview</string>
    <string name="camera">Camera</string>
    <string name="camera_preview">Camera Preview</string>
    <string name="cause">Cause:</string>
    <string name="note">Note:</string>
    <string name="source">"Source:"</string>
    <string name="treatment">Treatment:</string>
    <string name="symptoms">Symptoms:</string>
    <string name="description">Description:</string>
    <string name="causes">"Causes: "</string>
    <string name="scan_result">Scan Result</string>
    <string name="description_not_available">Description: Not Available</string>
    <string name="symptoms_not_available">Symptoms: Not Available</string>
    <string name="treatment_not_available">Treatment: Not Available</string>
    <string name="note_not_available">Note: Not Available</string>
    <string name="source_not_available">Source: Not Available</string>
    <string name="diagnosis">%1$s</string>
    <string name="descriptions">%1$s</string>
    <string name="about_us">About us</string>
    <string name="profile_picture">Logo image</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="diagnose">Diagnosis Prediction:</string>
    <string name="see_more">See more</string>
    <string name="gallery">Album</string>
    <string name="description_news">News description</string>
    <string name="title_news">News title</string>
    <string name="logo">Logo P3tsKit</string>
    <string name="with_love">Made with ❤️ by C242-PS104</string>
    <string name="short_desc">Your personal App for effortless \n\tcat and dog disease detection</string>
    <string name="welcome">Welcome to The</string>
    <string name="email_error">Invalid email address</string>
    <string name="email_hint">xxx@gmail.com</string>
    <string name="password_error">Password must be at least 5 chars</string>
    <string name="password_hint">Enter your password</string>
    <string name="language">Language</string>
    <string name="p3tskit_desc">P3tsKit Application is an application developed by the C242-PS104 team to assist pet owners, especially those with dogs and cats, in identifying skin issues such as infections or wounds. By simply taking or uploading a photo, users can detect potential problems quickly and accurately. The application utilizes machine learning and cloud computing to process images efficiently, ensuring reliable results. It provides clear information about the detected issue and its treatment, enabling pet owners to take immediate action to care for their pets effectively.</string>
    <string name="CC">Cloud Computing</string>
    <string name="MD">Mobile Development</string>
    <string name="howtouse">1. Upload an image of a close-up of your pet\'s disease using a picture from your gallery or capture the image using the camera.\n2. Click on the scan button to identify the disease.\n3. Your pet\'s predicted result is out!</string>
    <string name="ML">Machine Learning</string>
    <string name="name_ml_1">Name: Bunga Harumalia M</string>
    <string name="contact_ml_1">Contact: harumaliabunga@gmail.com</string>
    <string name="name_ml_2">Name: Hanivianka Amelia H</string>
    <string name="contact_ml_2">Contact: viankahamson@gmail.com</string>
    <string name="name_ml_3">Name: Linda Magdalena</string>
    <string name="contact_ml_3">Contact: lindamagdalena90@gmail.com</string>
    <string name="name_cc_1">Name: Nathan Tanoko</string>
    <string name="contact_cc_1">Contact: nathantanoko10@gmail.com</string>
    <string name="name_cc_2">Name: Timothy Henseputra</string>
    <string name="contact_cc_2">Contact: timothyhenseputra02@gmail.com </string>
    <string name="name_md_1">Name: Syifa Maulida</string>
    <string name="contact_md_1">Contact: syifamaulidaatmaja@gmail.com </string>
    <string name="name_md_2">Name: Finka Nindy A</string>
    <string name="contact_md_2">Contact: finkazhr@gmail.com</string>
    <string name="howto">How to scan:</string>
    <string name="tiet_question_label">Enter a question</string>
    <string name="tv_pick_topic_label">Choose topic</string>
    <string name="fragment_qna_title">%s - Bert QA</string>
    <string name="tv_inference_time_label">Inference Time: %d ms</string>
    <string name="ib_send_label">Send button</string>
    <string name="simple_caption">Welcome P3tsKit user</string>
    <string name="simple_caption2">Login to continue</string>

    <string-array name="spinner_items">
        <item>P3tsKit Developer</item>
        <item>Machine Learning</item>
        <item>Cloud Computing</item>
        <item>Mobile Development</item>
    </string-array>

</resources>