<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/whitehome_bg"
    android:layout_gravity="start"
    android:elevation="12dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"
            android:src="@drawable/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_predicted_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnose"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tv_result_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tv_treatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treatment"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:ellipsize="end" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>