<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.application.p3tskit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_history"
            app:destination="@id/navigation_history" />

    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.application.p3tskit.ui.scan.ScanFragment"
        android:label="@string/Scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.application.p3tskit.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/action_scanFragment_to_detailScanFragment"
        android:name="com.application.p3tskit.ui.scan.DetailScanFragment"
        android:label="@string/Scan"
        tools:layout="@layout/fragment_detail_scan_page" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.application.p3tskit.ui.history.HistoryFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_history" />
</navigation>