<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".ui.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter_semi_bold"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_semi_bold"
        android:textColor="@color/dark_peach"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_p3tskit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_to" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/short_desc"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter_semi_bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:fontFamily="@font/inter_semi_bold"
            android:textColor="@color/white"
            app:cornerRadius="24dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="@color/darknavy"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_baseline_login_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:fontFamily="@font/inter_semi_bold"
            android:textColor="@color/white"
            app:cornerRadius="24dp"
            android:backgroundTint="@color/dark_peach"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_baseline_app_registration_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
